<resources>
    <string name="app_name">Sofra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_food">طلب طعام</string>
    <string name="sell_food">بيع طعام</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="login">دخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة المرور ؟</string>
    <string name="dont_have_acc">ليس لديك حساب ؟ اضغط هنا</string>
    <string name="restaurant_name">اسم المطعم</string>
    <string name="delivery_time">مدة التوصيل</string>
    <string name="city">المدينة</string>
    <string name="region">الحي</string>
    <string name="confirm_password">اعادة كلمة المرور</string>
    <string name="minimum_order">الحد الادني للطلب</string>
    <string name="delivery_charge">رسوم التوصيل</string>
    <string name="continu">متابعة</string>
    <string name="conect_info">بيانات التواصل</string>
    <string name="phone">الجوال</string>
    <string name="whats_up">الواتس اب</string>
    <string name="store_image">صورة المتجر</string>
    <string name="register">تسجيل</string>
    <string name="name">الاسم</string>
    <string name="please_enter_email">من فضلك قم بإدخال بريدك الالكتروني</string>
    <string name="please_enter_code">من فضلك قم بإدخال الكود الذى تم ارساله</string>
    <string name="please_enter_password">من فضلك قم بكتابة كلمة المرور الجديدة</string>
    <string name="confirm_password_2">تأكيد كلمة المرور</string>
    <string name="send">ارسال</string>
    <string name="code">الكود</string>
    <string name="select_city">اختر المدينة</string>
    <string name="select_region">اختر الحي</string>
    <string name="category_image">صوره التصنيف</string>
    <string name="category_name">اسم التصنيف</string>
    <string name="add">اضف</string>
    <string name="category_edit">تعديل التصنيف</string>
    <string name="edit">تعديل</string>
    <string name="price">السعر :</string>
    <string name="open">مفتوح</string>
    <string name="minim_charge">الحد الادني للطلب :</string>
    <string name="minim_charge_">الحد الادني</string>
    <string name="search_restaurant">ابحث عن مطعمك المفضل</string>
    <string name="please_wait">من فضلك انتظر</string>
    <string name="home">الرئسية</string>
    <string name="more">المزيد</string>
    <string name="count">الكمية</string>
    <string name="please_to_comment">يسعدنا مشاركاتك بتعليق او تقيم</string>
    <string name="add_comment">اضف تعليق او تقييم</string>
    <string name="chose_rate">اختار تقييمك</string>
    <string name="add_comment_here">اضف تعليقك هنا</string>
    <string name="available">الحالة</string>
    <string name="added_to_store">تم اضافة العنصر الى السلة</string>
    <string name="total">المجموع الكلي</string>
    <string name="confirm_request">تاكيد الطلب</string>
    <string name="add_more">اضافة المزيد</string>
    <string name="pound">ريال</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="add_note">اضافة ملاحظات</string>
    <string name="order_address">عنوان التوصيل</string>
    <string name="payment">الدفع</string>
    <string name="payment_">الدفع :</string>
    <string name="online_payment">الدفع اونلاين</string>
    <string name="cash_payment">الدفع عند الاستلام</string>
    <string name="total_">المجموع :</string>
    <string name="total_amount">المبلغ الاجمالي :</string>
    <string name="delivery_coast">رسوم التوصيل :</string>
    <string name="add_address">اضف العنوان</string>
    <string name="new_requests">طلبات جديدة</string>
    <string name="current_requests">طلبات حالية</string>
    <string name="old_requests">طلبات سابقة</string>
    <string name="request_num">رقم الطلب :</string>
    <string name="address">العنوان :</string>
    <string name="cancel">الغاء</string>
    <string name="confirm_order">تاكيد الاستلام</string>
    <string name="completed_request">طلب مكتمل</string>
    <string name="canceled_request">الطلب ملغى</string>
    <string name="offer">العروض</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="about_app">عن التطبيق</string>
    <string name="change_password">تغير كلمة المرور</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="details">التفاصيل</string>
    <string name="new_offer">جديد العروض</string>
    <string name="offer_details">تفاصيل العرض</string>
    <string name="get_it_now">احصل عليه الان</string>
    <string name="from">من :</string>
    <string name="to">الى :</string>
    <string name="full_name">الاسم كاملا\"</string>
    <string name="whats_your_message">ما هى رسالتك ?</string>
    <string name="complain">شكوى</string>
    <string name="suggestion">اقتراح</string>
    <string name="enquiry">استعلام</string>
    <string name="about_app_dialog">هناك حقيقة مثبتة منذ زمن طويل وهى ان المحتوى المقروء لصفحة ما سيلهى القارئ عن التركيز على شكل تواضع الفقرات فى الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم ابيسوم لأنها تعطى توزيعا طبيعيا-الى- حد ما للاحرف عوضا عن الاستخدام هنا يوجد محتوى نصي</string>
    <string name="who_us">من نحن</string>
    <string name="log_out_answer">هل انت متاكد من الخروج ?</string>
    <string name="categories">تصنيفاتي</string>
    <string name="product_name">اسم المنتج</string>
    <string name="product_description">وصف مختصر</string>
    <string name="price_in_offer">السعر فى العرض</string>
    <string name="add_product_image">اضافة صورة للمنتج</string>
    <string name="product_image">صورة المنتج</string>
    <string name="my_offer">عروضي</string>
    <string name="comment_rate">التعليقات والتقييم</string>
    <string name="call">اتصال</string>
    <string name="accept">قبول</string>
    <string name="client">العميل :</string>
    <string name="day">يوم :</string>
    <string name="request_details">تفاصيل الطلب</string>
    <string name="request_price">سعر الطلب :</string>
    <string name="request_list">قائمة الطلبات</string>
    <string name="edit_profile">تعديل البيانات</string>
    <string name="status">الحالة</string>
    <string name="add_new_offer">اضف عرض جديد</string>
    <string name="add_offer_image">اضافة صورة العرض</string>
    <string name="offer_name">اسم العرض</string>
    <string name="select_date">اختار التاريخ</string>
    <string name="start_offer">بداية العرض</string>
    <string name="end_offer">نهاية العرض</string>
    <string name="offer_image">صورة العرض</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm_new_password">تاكيد كلمة المرور الجديدة</string>
    <string name="change">تغير</string>
    <string name="commission">العمولة</string>
    <string name="cart_subtitle">يرجى تحويل 10% من الربح المباع فى مدة اقصاها شهر علما بأن جميع الطلبات ستكون مسجلة على حسابك الشخصى</string>
    <string name="restaurant_salse">مبيعات المطعم :</string>
    <string name="restaurant_commission">عمولات التطبيق :</string>
    <string name="restaurant_paid">ماتم سداده :</string>
    <string name="residual">المتبقى :</string>
    <string name="reason_cancellation">ما سبب الالغاء</string>
    <string name="enter_reason_cancellation">من فضلك ادخل هنا سبب الالغاء</string>
</resources>
