<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <EditText
            android:id="@+id/fragment_contact_us_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/full_name"
            android:padding="12dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <EditText
            android:id="@+id/fragment_contact_us_ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/email"
            android:padding="12dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <EditText
            android:id="@+id/fragment_contact_us_ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone"
            android:padding="12dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <EditText
            android:id="@+id/fragment_contact_us_ed_message"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/whats_your_message"
            android:padding="12dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/fragment_contact_us_rg_message_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fragment_contact_us_rb_complain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complain" />

        <RadioButton
            android:id="@+id/fragment_contact_us_rb_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion" />

        <RadioButton
            android:id="@+id/fragment_contact_us_rb_enquiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enquiry" />
    </RadioGroup>

    <TextView
        android:id="@+id/fragment_contact_us_btn_send"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/sh_pink_gra_btn"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>