<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_create_item_food_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/janna"
        android:gravity="center"
        android:text="@string/add_product_image"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/fragment_create_item_food_iv_avatar"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:scaleType="center"
            android:src="@drawable/ic_image" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/cv_ed_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white">

        <EditText
            android:id="@+id/fragment_create_item_food_ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/janna"
            android:hint="@string/product_name"
            android:padding="8dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/cv_ed_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white">

        <EditText
            android:id="@+id/fragment_create_item_food_ed_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@null"
            android:fontFamily="@font/janna"
            android:gravity="top"
            android:hint="@string/product_description"
            android:padding="8dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/cv_ed_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white">

        <EditText
            android:id="@+id/fragment_create_item_food_ed_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/janna"
            android:hint="@string/price"
            android:padding="8dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/cv_ed_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/white">

        <EditText
            android:id="@+id/fragment_create_item_food_ed_price_in_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/janna"
            android:hint="@string/price_in_offer"
            android:padding="8dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragment_create_item_food_btn_add"
        style="@style/btn_pink"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/add" />
</LinearLayout>