<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/order_details"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <EditText
            android:id="@+id/fragment_complete_order_ed_note"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/add_note"
            android:padding="12dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:gravity="start"
        android:text="@string/order_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/gray_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <EditText
            android:id="@+id/fragment_complete_order_ed_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/add_address"
            android:padding="12dp"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:gravity="start"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/fragment_complete_order_rg_pay_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fragment_complete_order_rb_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cash_payment" />

        <RadioButton
            android:id="@+id/fragment_complete_order_rb_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/online_payment" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragment_complete_order_tv_total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_complete_order_tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fragment_complete_order_tv_total_title"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/fragment_complete_order_tv_total_title"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fragment_complete_order_tv_total"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/fragment_complete_order_tv_total"
                    android:text="@string/pound"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragment_complete_order_tv_delivery_coast_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_coast"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_complete_order_tv_delivery_coast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fragment_complete_order_tv_delivery_coast_title"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/fragment_complete_order_tv_delivery_coast_title"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fragment_complete_order_tv_delivery_coast"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/fragment_complete_order_tv_delivery_coast"
                    android:text="@string/pound"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragment_complete_order_tv_total_amount_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_complete_order_tv_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fragment_complete_order_tv_total_amount_title"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/fragment_complete_order_tv_total_amount_title"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/fragment_complete_order_tv_total_amount"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/fragment_complete_order_tv_total_amount"
                    android:text="@string/pound"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragment_complete_order_btn_confirm_request"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/sh_pink_gra_btn"
        android:gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/confirm_request"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>